<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/detail_main_constraint_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="100"
    android:background="#ECF2F8"
    tools:context=".ui.neighbour_list.DetailNeighboursActivity">

    <ImageView
        android:id="@+id/detail_avatar_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="40"
        android:layout_marginBottom="10dp"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/detail_cardview_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/ic_arrow_back_white_24dp"
        app:layout_constraintStart_toStartOf="@+id/detail_avatar_view"
        app:layout_constraintTop_toTopOf="@+id/detail_avatar_view" />

    <TextView
        android:id="@+id/detail_firstname_on_avatar_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:text="ici nom"
        android:textSize="30dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/detail_avatar_view"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/detail_cardview_one"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="4dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintVertical_weight="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_avatar_view">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FAF8F8"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">


            <TextView
                android:id="@+id/detail_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1sp"
                android:background="@android:color/white"
                android:padding="8dp"
                android:text="firstname"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/ic_place_rose_24dp" />

                    <TextView
                        android:id="@+id/detail_adress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="adress"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/ic_phone_rose_24dp" />

                    <TextView
                        android:id="@+id/detail_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="phone"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/ic_language_rose_24dp" />

                    <TextView
                        android:id="@+id/detail_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="mail"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#ECF2F8"
        android:elevation="4dp"
        android:padding="14dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_cardview_one">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FAF8F8"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_cardview_one">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="1sp"
                android:background="@android:color/white"
                android:padding="10dp"
                android:text="A propos de moi"
                android:textSize="18sp"
                android:textStyle="bold" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/detail_about_me"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"
                        android:padding="12dp"
                        android:paddingBottom="16dp"
                        android:text="content about me"
                        android:textSize="14sp" />
                </LinearLayout>
            </ScrollView>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/detail_add_favorite_neighbour_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="140dp"
        android:src="@drawable/ic_star_grey_24dp"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/detail_cardview_one"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>